--- a/Source Code/frontend/package.json
+++ b/Source Code/frontend/package.json
@@ -14,7 +14,9 @@
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "expo-media-library": "~15.9.2",
+    "expo-camera": "~14.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
